--- a/website/templates/languages.html
+++ b/website/templates/languages.html
@@ -7,6 +7,7 @@
     <div class="dropdown">
         <button class="dropbtn">Select Language</button>
         <div class="dropdown-content">
+             <!-- drowndown language selection -->
             <a href="#">English</a>
             <a href="#">French</a>
             <a href="#">German</a>
