--- a/website/templates/languages.html
+++ b/website/templates/languages.html
@@ -6,6 +6,7 @@
 <div class="header">
     <div class="dropdown">
         <button class="dropbtn">Select Language</button>
+         <!-- drowndown language selection -->
         <div class="dropdown-content">
             <a href="#">English</a>
             <a href="#">French</a>
