--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -31,6 +31,11 @@
         font-weight: bold;
       }
 
+      .navbar-gradient {
+        background: linear-gradient(to right, #ff4d4d, #b30000); 
+        color: white;
+        height: 70px; 
+      }
       .navbar-gradient .nav-link:hover {
         color: #ffcccc !important;
       }
