--- a/website/templates/generate_report.html
+++ b/website/templates/generate_report.html
@@ -19,9 +19,11 @@
         h1 {
             font-size: 36px;
             color: #333;
-            margin-bottom: 20px;
+            margin-bottom: 10px;
             border-bottom: 4px solid #c42727;  
+            margin-top: 20px;
             padding-bottom: 10px;
+            font-weight: 700;
         }
 
         .report-form {
