--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -10,12 +10,13 @@
         @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@600&family=Lato:wght@400&display=swap');
 
         body {
-            font-family: 'Lato', sans-serif;
+            font-family: Arial, sans-serif;
             background: linear-gradient(135deg, #f9f9f9 0%, #ffebeb 100%);
             margin: 0;
             padding: 0;
         }
 
+   
         .header {
             background-color: transparent; 
             color: #990000; 
