--- a/website/templates/set_clock.html
+++ b/website/templates/set_clock.html
@@ -4,7 +4,6 @@
 
 <div class="page-header">
   <h1>Set Clock</h1>
-  <hr class="header-line">
 </div>
 
 <!DOCTYPE html>
@@ -19,6 +18,7 @@
             display: flex;
             justify-content: space-between;
             padding: 20px;
+            
         }
 
 
@@ -48,7 +48,7 @@
             width: 100%;
             padding: 8px;
             font-size: 16px;
-            margin-bottom: 10px;
+            margin-bottom: 20px;
         }
 
         .apply-button {
@@ -63,14 +63,17 @@
         }
 
         .header {
-            font-size: 24px;
+            font-size: 36px;
             font-weight: bold;
             margin-bottom: 20px;
+
         }
 
         .page-header {
             text-align: center;
-            margin-top: 20px;
+
+            border-bottom: 4px solid #c42727;
+        
         }
 
         .page-header h1 {
@@ -78,6 +81,7 @@
             font-weight: 700;
             color: #333;
             margin-bottom: 10px;
+            margin-top: 30px;
         }
 
         .header-line {
@@ -86,6 +90,7 @@
             background-color: #c42727;
             margin: 10px auto;
             border: none;
+            margin-top: 20px;
         }
     </style>
 </head>
